# televoodoo-python

./: .gitignore  CONTRIBUTING.md  Multi-transport-spec.md  README.md  my_robot_config.json  pyproject.toml  recording_20260109_165541.json  requirements.txt
docs/: BLE_API.md  BLE_PERIPHERAL_API.md  BLE_PERIPHERAL_API_v2.md  CONFIGURATION.md  CONNECTION_AUTHENTICATION.md  CONNECTION_SETUP.md  DATA_FORMAT.md  HAPTIC_FEEDBACK.md  HAPTIC_FEEDBACK_API.md  MOBILE_PROTOCOL.md  OUTPUT_FORMATS.md  POSE_DATA_FORMAT.md  UPSAMPLING_RATE_LIMITING.md  USAGE.md  USB_API.md  WIFI_API.md  WIFI_API_v2.md  WLAN_API_v2.md
examples/data_rate_limiting/: README.md  data_rate_limiting.py
examples/data_upsampling/: README.md  data_upsampling.py
examples/haptic_feedback/: README.md  haptic_feedback.py
examples/measure_frequency/: README.md  measure_frequency.py
examples/output_poller/: README.md  output_poller.py  voodoo_settings.json
examples/poll_poses/: README.md  poll_poses.py
examples/pose_frequency/: README.md  pose_frequency.py
examples/pose_logger/: README.md  pose_logger.py
examples/pose_recording/: README.md  pose_recording.py
examples/print_delta_poses/: README.md  print_delta_poses.py
examples/print_poses/: README.md  print_poses.py
examples/rate_limit/: README.md  rate_limit.py
examples/record_poses/: README.md  record_poses.py
examples/teleop_xarm/: README.md  teleop_xarm.py  xarm_config.json
examples/upsampled_control/: README.md  upsampled_control.py
src/televoodoo/: __init__.py  __main__.py  ble.py  ble_peripheral_macos.py  ble_peripheral_ubuntu.py  (+15 more)
(+3 files in other folders)
