[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "televoodoo"
version = "0.1.0"
description = "Use your phone as a 6DoF controller with the Televoodoo app (iOS/Android)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
  "qrcode",
  "pyobjc-core; sys_platform == 'darwin'",
  "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
  "pyobjc-framework-CoreBluetooth; sys_platform == 'darwin'",
  "bluezero; sys_platform == 'linux'",
]
authors = [{ name = "Daniel Hammer" }]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["televoodoo"]

[project.scripts]
televoodoo = "televoodoo.__main__:main"


